Fix tooltip border style in LineChart component

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ export default function CompleteQuantumEngine() {
                 <CartesianGrid strokeDasharray="3 3" stroke="#374151" />
                 <XAxis dataKey="iteration" stroke="#9CA3AF" />
                 <YAxis stroke="#9CA3AF" />
-                <Tooltip contentStyle={{ backgroundColor: '#1F2937', border: '1px solid '#374151' }} labelStyle={{ color: '#E5E7EB' }} />
+                <Tooltip contentStyle={{ backgroundColor: '#1F2937', border: '1px solid #374151' }} labelStyle={{ color: '#E5E7EB' }} />
                 <Legend />
                 <Line type="monotone" dataKey="vonNeumannEntropy" stroke="#EC4899" strokeWidth={2} name="von Neumann Entropy" />
                 <Line type="monotone" dataKey="merkleValid" stroke="#F59E0B" strokeWidth={3} name="Structural Integrity" />
